Fixed scrolling on mobile

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,7 +8,7 @@
 }
 
 .sidebar-pusher {
-  height: 100% !important;
+//  height: 100% !important;
 }
 
 span.price {
